* Shifted wandio into a separate library, seeing as we're going to be exporting the API now

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 LIBPACKETDUMP_DIR = libpacketdump
 TOOLS_DIR = tools
-SUBDIRS = lib $(LIBPACKETDUMP_DIR) $(TOOLS_DIR) docs examples
+WANDIO_DIR=libwandio
+SUBDIRS = $(WANDIO_DIR) lib $(LIBPACKETDUMP_DIR) $(TOOLS_DIR) docs examples
 
 ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = 1.9 foreign
