* Moved SLL header definitions from libtrace_int.h into libtrace.h

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -945,6 +945,30 @@ typedef enum {
         TRACE_OSPF_LS_EXTERNAL = 5	/**< OSPF AS External LSA */
 } libtrace_ospf_ls_types_t;
 
+/** A local definition of an SLL header */
+typedef struct libtrace_sll_header_t {
+        uint16_t pkttype;               /**< Packet type */
+        uint16_t hatype;                /**< Link-layer address type */
+        uint16_t halen;                 /**< Link-layer address length */
+        unsigned char addr[8];          /**< Link-layer address */
+        uint16_t protocol;              /**< Protocol */
+} libtrace_sll_header_t;
+
+
+/* SLL packet types */
+
+/** Packet was addressed for the local host */
+#define TRACE_SLL_HOST          0
+/** Packet was addressed for a broadcast address */
+#define TRACE_SLL_BROADCAST     1
+/** Packet was addressed for a multicast address */
+#define TRACE_SLL_MULTICAST     2
+/** Packet was addressed for another host but was captured by a promiscuous
+ * device */
+#define TRACE_SLL_OTHERHOST     3
+/** Packet originated from the local host */
+#define TRACE_SLL_OUTGOING      4
+
 
 #ifdef WIN32
 #pragma pack(pop)
