* Make sure wandio.h can be found when building libpacketdump  * link_6.c no longer requires libtrace_int.h if the copy of the arphrd conversion function is made static

--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -170,7 +170,7 @@ libpacketdump_la_SOURCES = libpacketdump.cc \
 plugin_LTLIBRARIES = $(BIN_PROTOCOLS)
 dist_plugin_DATA = $(TXT_PROTOCOLS)
 
-INCLUDES= @ADD_INCLS@ -I../lib 
+INCLUDES= @ADD_INCLS@ -I../lib -I../libwandio 
 
 # NOTE: You CANNOT add @LEXLIBS@ here, as they are statically compiled
 # which on non x86_32 platforms means that they cannot be linked into
