--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -375,7 +375,7 @@ typedef enum {
 	TRACE_RT_DATA_DLT_END		= 2999,
 	/** Unused value marking the end of the valid range for all RT packet
 	 * types */
-	TRACE_RT_LAST			= (2<<31)
+	TRACE_RT_LAST			= 3000
 } libtrace_rt_types_t;
 
 /** IP Protocol values */
