Fixed bugs when converting packets from Linux SLL (pcap) to ERF - thanks to Simon Wadsworth for reporting this problem  * Raw IP packets (e.g. captured using pcapint:any) are now treated as TRACE_TYPE_NONE internally.  * TRACE_TYPE_NONE maps to the ERF type TYPE_IPV4 - distinguishing between IPv4 and IPv6 within the current API is a bit tricky so that's on the TODO list  * Wire length calculation for Ethernet encapsulated inside Linux SLL now includes the FCS, just like every other libtrace packet format.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -404,6 +404,7 @@ typedef enum {
 /** Ethertypes supported by Libtrace */
 typedef enum {
 	/* Numbers <=1500 are of course, LLC/SNAP */
+	TRACE_ETHERTYPE_LOOPBACK= 0x0060,	/**< Ethernet Loopback */
 	TRACE_ETHERTYPE_IP	= 0x0800,	/**< IPv4 */
 	TRACE_ETHERTYPE_ARP	= 0x0806,	/**< Address resolution protocol */
 	TRACE_ETHERTYPE_RARP	= 0x8035,	/**< Reverse ARP */
